[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Player/sprMainBase.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Player/sprFist.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/FistController.gd" type="Script" id=4]
[ext_resource path="res://Animations/anim_jabLong.tres" type="Animation" id=5]
[ext_resource path="res://Animations/anim_jab.tres" type="Animation" id=6]
[ext_resource path="res://Curves/cv_Punch.tres" type="Curve" id=8]
[ext_resource path="res://Animations/anim_spinCharge.tres" type="Animation" id=9]
[ext_resource path="res://Animations/anim_punch.tres" type="Animation" id=10]
[ext_resource path="res://Sprites/Player/sprRetic.png" type="Texture" id=11]
[ext_resource path="res://Animations/anim_fistExpl.tres" type="Animation" id=12]

[sub_resource type="CapsuleShape2D" id=1]
height = 10.0

[sub_resource type="CapsuleShape2D" id=2]
height = 10.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 36 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 60 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="MainPartColl" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="MainSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FistRgt" type="Area2D" parent="."]
position = Vector2( 26, 0 )
collision_layer = 4
collision_mask = 32
script = ExtResource( 4 )
punchCurve = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FistRgt"]
anims/anim_fistExpl = ExtResource( 12 )
anims/anim_jab = ExtResource( 6 )
anims/anim_jabLong = ExtResource( 5 )
anims/anim_punch = ExtResource( 10 )
anims/anim_spinCharge = ExtResource( 9 )

[node name="Coll" type="CollisionShape2D" parent="FistRgt"]
shape = SubResource( 2 )
disabled = true

[node name="CollShort" type="CollisionShape2D" parent="FistRgt"]
visible = false
position = Vector2( 0, -12 )
shape = SubResource( 3 )
disabled = true

[node name="CollLong" type="CollisionShape2D" parent="FistRgt"]
visible = false
position = Vector2( 0, -28 )
shape = SubResource( 4 )
disabled = true

[node name="FistSpr" type="Sprite" parent="FistRgt"]
texture = ExtResource( 3 )
hframes = 4

[node name="Retic" type="Sprite" parent="FistRgt"]
texture = ExtResource( 11 )

[node name="FistLft" type="Area2D" parent="."]
position = Vector2( -26, 0 )
collision_layer = 4
collision_mask = 32
script = ExtResource( 4 )
punchCurve = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FistLft"]
anims/anim_fistExpl = ExtResource( 12 )
anims/anim_jab = ExtResource( 6 )
anims/anim_jabLong = ExtResource( 5 )
anims/anim_punch = ExtResource( 10 )
anims/anim_spinCharge = ExtResource( 9 )

[node name="Coll" type="CollisionShape2D" parent="FistLft"]
shape = SubResource( 2 )
disabled = true

[node name="CollShort" type="CollisionShape2D" parent="FistLft"]
visible = false
position = Vector2( 0, -12 )
shape = SubResource( 3 )
disabled = true

[node name="CollLong" type="CollisionShape2D" parent="FistLft"]
visible = false
position = Vector2( 0, -28 )
shape = SubResource( 4 )
disabled = true

[node name="FistSpr" type="Sprite" parent="FistLft"]
texture = ExtResource( 3 )
hframes = 4

[node name="Retic" type="Sprite" parent="FistLft"]
texture = ExtResource( 11 )
